Removed mentions of AI

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
     {{ content }}
   </main>
   <footer>
-    &copy; {{ site.time | date: '%Y' }} {{ site.title }} &mdash; Powered by Jekyll & AI
+    &copy; {{ site.time | date: '%Y' }} {{ site.title }} &mdash; Powered by imagination
   </footer>
 </body>
 </html>
