Updates to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,8 +77,7 @@
       <img src="{{ '/assets/clickbait_generator.png' | relative_url }}" alt="{{ site.title }}" class="logo">
     </a>
     <nav>
-      <a href="{{ '/' | relative_url }}">Home</a>
-      <a href="{{ '/about.html' | relative_url }}">About</a>
+      <a href="{{ '/about.html' | relative_url }}">Meet the team</a>
     </nav>
   </header>
   <main>
