--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <p class="post-meta">Published {{ page.date | date: "%B %d, %Y" }}
+  <p class="post-meta">Published {% include ordinal_date.html date=page.date %}
   {% if page.author and page.author_url %}
     — By <a href="{{ page.author_url | relative_url }}">{{ page.author }}</a>
   {% endif %}
