AI suggested updates and categories

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -20,7 +20,7 @@ layout: default
 
   <section class="author-posts">
     <h2>All stories by {{ author.name }}</h2>
-  {% assign posts_by_author = site.posts | where: "author", author.name %}
+    {% assign posts_by_author = site.posts | where: "author_id", author.id %}
     {% if posts_by_author and posts_by_author.size > 0 %}
       <ul>
         {% for post in posts_by_author %}
